# noir_llzk

./: .gitignore  Cargo.toml  Makefile  README.md  flake.nix
.github/actions/install-llzk/: action.yml
.github/actions/install-pcl-mlir/: action.yml
.github/workflows/: ci.yml  llzk.env
binary/: Cargo.toml
binary/src/: main.rs
noir_examples/aes128/: Nargo.toml
noir_examples/aes128/src/: main.nr
noir_examples/basic_div/: Nargo.toml  Prover.toml
noir_examples/basic_div/src/: main.nr
noir_examples/bitwise/: Nargo.toml
noir_examples/bitwise/src/: main.nr
noir_examples/blake2s/: Nargo.toml
noir_examples/blake2s/src/: main.nr
noir_examples/blake3/: Nargo.toml
noir_examples/blake3/src/: main.nr
noir_examples/break_with_trailing/: Nargo.toml
noir_examples/cascaded_match/: Nargo.toml
noir_examples/const_in_branch/: Nargo.toml  acir.txt
noir_examples/continue_with_trailing/: Nargo.toml
noir_examples/divergent_helper_in_loop/: Nargo.toml
noir_examples/embedded_curve_add/: Nargo.toml
noir_examples/inclusive_break/: Nargo.toml
noir_examples/keccak/: Nargo.toml
noir_examples/memory_ops/: Nargo.toml
noir_examples/multi_exit_loop/: Nargo.toml
noir_examples/multi_scalar_mul/: Nargo.toml  Prover.toml
noir_examples/mutual_recursion/: Nargo.toml
noir_examples/nested_loops/: Nargo.toml
noir_examples/panic_in_loop/: Nargo.toml
noir_examples/recursive_unconstrained/: Nargo.toml
noir_examples/to_radix/: Nargo.toml
noir_examples/walk_assert_then_joining/: Nargo.toml
noir_examples/while_loop/: Nargo.toml
scripts/: build-macos.sh
src/: lib.rs  program.rs  tests.rs
test_files/: vars_no_constraints.json
(+21 files in other folders)
