[package]
name = "acir2llzk"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "acir2llzk"
path = "src/main.rs"

[dependencies]
llzk = { git = "https://github.com/Veridise/llzk-rs", features = ["bigint"], rev = "19a5604"}
llzk-sys = { git = "https://github.com/Veridise/llzk-rs", rev = "19a5604"}
acir_llzk = { path = "../library" }
