[package]
name = "acir2llzk"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "acir2llzk"
path = "src/main.rs"

[dependencies]
llzk = { git = "https://github.com/Veridise/llzk-rs", features = ["bigint"], rev = "cb836a8"}
llzk-sys = { git = "https://github.com/Veridise/llzk-rs", rev = "cb836a8"}
acir_llzk = { path = "../library" }
